--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -1,59 +1,110 @@
 .about-section {
-  width: 80vw;
+  width: 100vw;
+  max-width: 1200px;
   display: flex;
-  margin-top: -20vh;
   justify-content:space-around;
+  color: azure;
   @include media(">=phone", "<lgphone") {
     flex-direction: column;
   }
-  @include media(">=lgphone", "<tablet") {
-    flex-direction: column;
-  }
-  @include media(">=tablet", "<desktop") {
+  @include media(">=lgphone", "<=desktop") {
     flex-direction: column;
     align-items: center;
+    margin-top: 10vh;
+    width:90vw;
   }
+  
   .content {
-    width: 50%;
-    @include media( "<desktop") {
-      width: 100%;
+    display: flex;
+    flex-direction: column;
+
+    @include media("<phone") {
+      width:100%;
+    }
+    @include media(">phone", "<tablet") {
+      width:80%;
+    }
+    @include media(">=tablet", "<desktop") {
+      width: 75%;
     }
 
     h1 {
       font-size: 3rem;
       line-height: 20px;
-      @include media(">=tablet", "<desktop") {
+      @include media(">=phone", "<=tablet") {
         text-align: center;
       }
     }
-    
   }
 
   .image-wrapper {
-    width: 40%;
+    width: 650px;
     height: auto;
     display: flex;
     justify-content: center;
+    align-items: center;
     overflow: hidden;
-
+    padding: 10px;
+    
     img {
       max-width: 80%;
-      max-height: 80%;
-      border-radius: 50%;
-      @include media("<desktop") {
-        height: 80%;
-      }
+      max-height: 80%; 
+      margin-bottom: 50px;    
     }
-    
-    @include media("<tablet") {
-      width: 100%;
-      height: auto;
+  
+    @include media(">=phone", "<tablet") {
+      width: auto;
       align-self: center;
     }
     @include media(">=tablet", "<desktop") {
-      height: auto;
       width: auto;
+      height: auto;
+    }
+
+    .hexagon{
+      background-image: url(../images/profilepic2.jpg);
+    }
+    
+  }
+  
+  .btn-2 {
+    letter-spacing: 0;
+    padding: 20px;
+
+    @include media(">=phone", "<=tablet") {
+      align-self: center;
     }
   }
 
+  .btn-2:hover,
+  .btn-2:active {
+    letter-spacing: 5px;
+  }
+
+  .btn-2:after,
+  .btn-2:before {
+    backface-visibility: hidden;
+    border: 1px solid rgba(rgb(253,230,21), 0);
+    bottom: 0px;
+    content: " ";
+    display: block;
+    margin: 0 auto;
+    position: relative;
+    transition: all 280ms ease-in-out;
+    width: 0;
+  }
+
+  .btn-2:hover:after,
+  .btn-2:hover:before {
+    backface-visibility: hidden;
+    border-color: rgb(253,230,21);
+    transition: width 350ms ease-in-out;
+    width: 70%;
+  }
+
+  .btn-2:hover:before {
+    bottom: auto;
+    top: 0;
+    width: 70%;
+  }
 }
