--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: white;
   h1 {
     font-size: 3rem;
     line-height: 20px;
@@ -24,7 +25,7 @@
   }
   .email-link {
     font-size: 1.5rem;
-    color: black;
+    color: #D9C717;
   }
   .social-icons {
     margin-top: 20px;
