--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,29 +1,14 @@
 .header-wrapper {
-  width: 80vw;
-  height: 30vw;
-  margin-top: 10vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  
-  h2 {
-    font-size: 1rem;
-    text-align: center;
-    @include media(">=phone", "<lgphone") {
-      font-size: 14px;
-    }
-    @include media(">=lgphone", "<tablet") {
-      font-size: 16px;
-    }
-    @include media(">=tablet", "<desktop") {
-      font-size: 16px;
-    }
-  }
+
   .heading-wrapper {
     h1 {
-      font-family: 'Fredoka One', cursive;
-      font-size: 6em;
+      font-family: 'Raleway', sans-serif;
+      font-size: 3em;
       text-align: center;
       line-height: 20px;
       @include media(">=phone", "<lgphone") {
@@ -31,94 +16,36 @@
         line-height: 10px;
       }
       @include media(">=lgphone", "<tablet") {
-        font-size: 1.5rem;
-        line-height: 10px;
+        font-size: 2rem;
       }
       @include media(">=tablet", "<desktop") {
-        font-size: 2.5rem;
+        font-size: 2rem;
       }
     }
   }
-  p {
-    width: 50%;
-    text-align: center;
-    overflow: hidden;
-    @include media(">=phone", "<lgphone") {
-      font-size: 12px;
-      width: 100%;
-    }
-    @include media(">=lgphone", "<tablet") {
-      font-size: 12px;
-      width: 100%;
-    }
-    @include media(">=tablet", "<desktop") {
-      font-size: 14px;
-      width: 100%;
-    }
-  }
 
-  .btn {
-    color: #692705;
-    cursor: pointer;
-    // display: block;
-    font-size:20px;
-    font-weight: 400;
-    line-height: 45px;
-    margin: 0 0 2em;
-    max-width: 160px; 
-    position: relative;
-    text-decoration: none;
-    text-transform: uppercase;
-    width: 100%; 
-    text-align: center;
+  .buttons{
+    display: flex;
+    width: 300px;
+    flex-direction: column;
+    align-items: center;
 
-    transition-property: all;
-    transition-duration: .6s;
-    transition-timing-function: ease;
-
-  
+    .btn-5 {
+      border: 0 solid;
+      box-shadow: inset 0 0 20px rgba(255, 255, 255, 0);
+      outline: 1px solid;
+      outline-color: rgba(255, 255, 255, .5);
+      outline-offset: 0px;
+      text-shadow: none;
+      transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+    } 
     
-    @media(min-width: 600px) {
-        
-      margin: 0 1em 2em;
-      
+    .btn-5:hover {
+      border: 1px solid;
+      box-shadow: inset 0 0 20px rgba(255, 255, 255, .5), 0 0 20px rgba(255, 255, 255, .2);
+      outline-color: rgba(255, 255, 255, 0);
+      outline-offset: 15px;
+      text-shadow: 1px 1px 2px #427388; 
     }
-    &:hover { text-decoration: none; }
   }
-
-  .btn-2 {
-    letter-spacing: 0;
-}
-
-.btn-2:hover,
-.btn-2:active {
-  letter-spacing: 5px;
-}
-
-.btn-2:after,
-.btn-2:before {
-  backface-visibility: hidden;
-  border: 1px solid rgba(rgb(255, 87, 0), 0);
-  bottom: 0px;
-  content: " ";
-  display: block;
-  margin: 0 auto;
-  position: relative;
-  transition: all 280ms ease-in-out;
-  width: 0;
-}
-
-.btn-2:hover:after,
-.btn-2:hover:before {
-  backface-visibility: hidden;
-  border-color: rgb(255, 87, 0);
-  transition: width 350ms ease-in-out;
-  width: 70%;
-}
-
-.btn-2:hover:before {
-  bottom: auto;
-  top: 0;
-  width: 70%;
-}
 }
