--- a/src/styles/mains.scss
+++ b/src/styles/mains.scss
@@ -1,8 +1,8 @@
 @charset "utf-8";
 @import "./include-media.scss";
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Prompt:wght@200&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 
 // Components
 @import "./card.scss";
@@ -16,7 +16,7 @@
 
 * {
   font-family: "Montserrat";
-  -ms-overflow-style: none;
+  
 }
 ::-webkit-scrollbar {
   display: none;
@@ -27,21 +27,128 @@ body {
   padding: 0;
   overflow-y: scroll;
   overflow-x: hidden;
-  color: #692705;
-  background-color: #ffeee4;
+  color: #FEE715FF;
+  background-color: #101820FF;
 }
 
 .section {
   width: 100vw;
-  overflow: hidden;
 }
 
 .container {
   width: 100%;
   height: 100vh;
+  min-height: 720px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
+@keyframes smoothScroll {
+  0% {
+    transform: translateY(-142px);
+  }
+
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+.btn {
+  cursor: pointer;
+  font-size: 1.2rem;
+  font-weight: 400;
+  line-height: 45px;
+  margin: 0 0 2em;
+  max-width: 160px; 
+  position: relative;
+  text-decoration: none;
+  text-transform: uppercase;
+  width: 100%; 
+  text-align: center;
+  color: white;
+
+  transition-property: all;
+  transition-duration: .6s;
+  transition-timing-function: ease;
+  
+  @include media(">=phone", "<lgphone") {
+    font-size: 1rem;
+  }
+  @include media(">=lgphone", "<tablet") {
+    font-size: 1rem;
+  }
+  @include media(">=tablet", "<desktop") {
+    font-size: 1rem;
+  }
+
+  &:hover { text-decoration: none; }
+}
+
+
+.hexagon {
+  position: relative;
+  width: 300px; 
+  height: 173.21px;
+  margin: 86.60px 0;
+  background-size: auto 346.4102px;
+  background-position: center;
+}
+
+.hexTop,
+.hexBottom {
+  position: absolute;
+  z-index: 1;
+  width: 212.13px;
+  height: 212.13px;
+  overflow: hidden;
+  -webkit-transform: scaleY(0.5774) rotate(-45deg);
+  -ms-transform: scaleY(0.5774) rotate(-45deg);
+  transform: scaleY(0.5774) rotate(-45deg);
+  background: inherit;
+  left: 43.93px;
+}
+
+/*counter transform the bg image on the caps*/
+.hexTop:after,
+.hexBottom:after {
+  content: "";
+  position: absolute;
+  width: 300.0000px;
+  height: 173.20508075688775px;
+  -webkit-transform:  rotate(45deg) scaleY(1.7321) translateY(-86.6025px);
+  -ms-transform:      rotate(45deg) scaleY(1.7321) translateY(-86.6025px);
+  transform:          rotate(45deg) scaleY(1.7321) translateY(-86.6025px);
+  -webkit-transform-origin: 0 0;
+  -ms-transform-origin: 0 0;
+  transform-origin: 0 0;
+  background: inherit;
+}
+
+.hexTop {
+  top: -106.0660px;
+}
+
+.hexTop:after {
+  background-position: center top;
+}
+
+.hexBottom {
+  bottom: -106.0660px;
+}
+
+.hexBottom:after {
+  background-position: center bottom;
+}
+
+.hexagon:after {
+  content: "";
+  position: absolute;
+  top: 0.0000px;
+  left: 0;
+  width: 300.0000px;
+  height: 173.2051px;
+  z-index: 2;
+  background: inherit;
+}
