--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -2,14 +2,15 @@
   width: 100vw;
   display: flex;
   align-items: center;
-  position: fixed;
-  padding-top: 40px;
+  padding-top: 10px;
   justify-content: space-between;
-  border-bottom: 0px solid rgb(0, 0, 0);
+  border-bottom: 5px solid #ffffff;
   box-shadow:0px 3px 0px #00000013;
   color: black;
-  background-color: #e5c7bc;
+  background-color: rgba(254, 231, 21, 0.842);
   z-index: 1000;
+  position: absolute;
+  
   .current {
     font-weight: 600;
     font-size: 28px;
@@ -19,7 +20,6 @@
     margin: 10px 0px 10px 10px;
     box-shadow: inset 9px 9px 34px -24px rgba(255, 87, 0, 0.342);
     text-align: center;
-    color: #692705;
     .fade-enter {
       opacity: 0;
     }
